network_policies/deny-external-db-access-networkpolicy-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-external-db-access
spec:
  podSelector:
    matchLabels:
      component: db
  policyTypes:
    - Ingress
  ingress: []
